# operating_systems

docker/: docker-compose.yml  dockerfile-minix
lab1/: README.txt  minix_mount.sh  t1.txt  tresc_lab1.txt
lab2/: minix_mount.sh  tresc_lab2.txt
lab2/1/: README.txt
lab2/2/: minix_mount.sh
lab2/rozwiazanie_peku/: index.html
lab2/rozwiazanie_peku/minix203-lottery-scheduling/: README.md
lab2/sched/: const.h  main.c  proc.c
lab2/wizualizacja_algorytmu/: CMakeLists.txt  proc.h
lab3/: CMakeLists.txt  example.c  main.c  main.h  queue.c  queue.h  semaphores.c  semaphores.h  t3.txt  test.c
lab3/simple/: Makefile  factory  main.c
lab4/: .main.cpp.swp  .monitor.h.swp  Makefile  bolidy_rozwiazanie_pseudo_kod.txt  main.cpp  main.out  t4.txt
lab5/: minix.sh
lab5/Siwy/fs/: pastylka.txt
lab5/Siwy/mm/: fs_table.c  (+4 more)
lab5/tmp/: alloc.c
lab6/: .t6.txt.swp  Makefile  MemoryDirector.cpp  main.cpp  main.h  t6.txt
lab6/1/: .fuse_hidden000001e300000003  .fuse_hidden0000037600000001  .fuse_hidden0000039300000002  .fuse_hidden0000042000000004  .fuse_hidden0000042300000005  Plik 1,5kB.txt  Plik 1kB.txt  Plik 2kB.txt  README  VirtualFS.cpp  VirtualFS.h  main.cpp  makefile
lab6/4/: copy.c  create.c  fs.h  main.c  misc.c  remove.c  test.txt  test2.txt
lab6/manager/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  Validator.cpp  Validator.h  VirtualDisc.cpp  VirtualDisc.h  VirtualFile.cpp  VirtualFile.h  VirtualHole.cpp  VirtualHole.h  main.cpp  main.h
minix_usr/adm/: lastlog  log  wtmp
piotrek/: CMakeLists.txt  main.c
simple_semafors/: CMakeLists.txt  main.c
(+34 files in other folders)
